fix: Debugando se ainda tiver erro 500

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=caboose.proxy.rlwy.net;Port=47524;Database=railway;Username=postgres;Password=sMIPVvYOZnOkFRQbySqWgzUZZwvcSMsR;SSL Mode=Require;Trust Server Certificate=true;"
   },
+
   "Spotify": {
-    "ClientId": "33b25996011749dcbf1ef0fac39f1e25",
-    "ClientSecret": "76f083ef376445708bb97e635ad9ba12",
-    "RedirectUri": "https://pomodoro-focus-backend-production.up.railway.app/api/spotifyauth/callback"
+    "ClientId": "",
+    "ClientSecret": "",
+    "RedirectUri": ""
   }
 }
