foi criada a rota de RefreshToken

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,8 +11,8 @@
   },
 
   "Spotify": {
-    "ClientId": "",
-    "ClientSecret": "",
-    "RedirectUri": ""
+    "ClientId": "33b25996011749dcbf1ef0fac39f1e25",
+    "ClientSecret": "76f083ef376445708bb97e635ad9ba12",
+    "RedirectUri": "https://pomodoro-focus-backend-production.up.railway.app/api/spotifyauth/callback"
   }
 }
